tests/config_module_system_node_allow_root_relative/config_module_system_node_allow_root_relative.exp
Error ----------------------------------------------------------------------------------------------- subdir/test.js:6:2

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:6:2
   6| (ambiguous: empty)
       ^^^^^^^^^

References:
   ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   subdir/test.js:6:13
   6| (ambiguous: empty)
                  ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- subdir/test.js:9:2

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:9:2
   9| (sub_ambiguous: empty)
       ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   subdir/test.js:9:17
   9| (sub_ambiguous: empty)
                      ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:13:2

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:13:2
   13| (user_code: empty)
        ^^^^^^^^^

References:
   user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:13:13
   13| (user_code: empty)
                   ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:16:2

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:16:2
   16| (sub_user_code: empty)
        ^^^^^^^^^^^^^

References:
   subdir/user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:16:17
   16| (sub_user_code: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:20:2

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:20:2
   20| (node_code: empty)
        ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:20:13
   20| (node_code: empty)
                   ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:23:2

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   subdir/test.js:23:2
   23| (sub_node_code: empty)
        ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:23:17
   23| (sub_node_code: empty)
                       ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- subdir/test.js:26:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   26| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- subdir/test.js:27:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   27| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:3:2
   3| (ambiguous: empty)
       ^^^^^^^^^

References:
   ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:3:13
   3| (ambiguous: empty)
                  ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:6:2
   6| (sub_ambiguous: empty)
       ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:6:17
   6| (sub_ambiguous: empty)
                      ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:2

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:10:2
   10| (user_code: empty)
        ^^^^^^^^^

References:
   user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:10:13
   10| (user_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:2

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:13:2
   13| (sub_user_code: empty)
        ^^^^^^^^^^^^^

References:
   subdir/user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:13:17
   13| (sub_user_code: empty)
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:17:2
   17| (node_code: empty)
        ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:17:13
   17| (node_code: empty)
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:2

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-cast]

   test.js:20:2
   20| (sub_node_code: empty)
        ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:20:17
   20| (sub_node_code: empty)
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:23:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   23| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:24:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   24| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^



Found 16 errors
